force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Weight_Node_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Weight_Node_Type__c</fullName>
    <description>Internal use only</description>
    <label>Weight Relations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>