force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Weight_Preferred_Technician__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Weight_Preferred_Technician__c</fullName>
    <label>Weight Preferred Technician</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>