force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/fields/SVMXC__Weight_Time_Window__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Weight_Time_Window__c</fullName>
    <description>Internal use only</description>
    <label>Weight Time Window</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>