force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Business_Rule.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Business_Rule</fullName>
    <active>true</active>
    <label>Business Rule</label>
</RecordType>