force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Checklist_Smart_Doc.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Checklist_Smart_Doc</fullName>
    <active>true</active>
    <label>Checklist Smart Doc</label>
</RecordType>