force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Contract_Billing_Process.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Contract_Billing_Process</fullName>
    <active>true</active>
    <label>Contract Billing Process</label>
</RecordType>