force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Delivery_Rule.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Delivery_Rule</fullName>
    <active>true</active>
    <description>Delivery Rule (APL)</description>
    <label>Delivery Rule</label>
</RecordType>