force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Dispatch_Process.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Dispatch_Process</fullName>
    <active>true</active>
    <description>Dispatch Process</description>
    <label>Dispatch Process</label>
</RecordType>