force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Export_Configuration.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Export_Configuration</fullName>
    <active>true</active>
    <label>Export Configuration</label>
</RecordType>