force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Forward_Shipment_Process.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Forward_Shipment_Process</fullName>
    <active>true</active>
    <description>Forward Shipment Process</description>
    <label>Forward Shipment Process</label>
</RecordType>