force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Fulfillment_Process.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Fulfillment_Process</fullName>
    <active>true</active>
    <label>Fulfillment Process</label>
</RecordType>