force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Initiate_Return_Process.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Initiate_Return_Process</fullName>
    <active>true</active>
    <description>Initiate Returns (APL)</description>
    <label>Initiate Return Process</label>
</RecordType>