force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Inventory_Process.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Inventory_Process</fullName>
    <active>true</active>
    <description>Inventory Process</description>
    <label>Inventory Process</label>
</RecordType>