force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Linked_Process.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Linked_Process</fullName>
    <active>true</active>
    <description>Linked Process</description>
    <label>Linked Process</label>
</RecordType>