force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Module.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Module</fullName>
    <active>true</active>
    <description>Module</description>
    <label>Module</label>
</RecordType>