force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Named_Search.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Named_Search</fullName>
    <active>true</active>
    <description>Named Search</description>
    <label>Named Search</label>
</RecordType>