force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Object_Mapping.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Object_Mapping</fullName>
    <active>true</active>
    <description>Object Mapping</description>
    <label>Object Mapping</label>
</RecordType>