force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Outbound_Route_Calculation.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Outbound_Route_Calculation</fullName>
    <active>true</active>
    <label>Outbound Route Calculation</label>
</RecordType>