force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__PM_Process.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__PM_Process</fullName>
    <active>true</active>
    <label>PM Process</label>
</RecordType>