force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Process_Business_Rule.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Process_Business_Rule</fullName>
    <active>true</active>
    <label>Process Business Rule</label>
</RecordType>