force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Process_Node_Objects.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Process_Node_Objects</fullName>
    <active>true</active>
    <description>Process Node Objects</description>
    <label>Process Node Objects</label>
</RecordType>