force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__QB_Validation.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__QB_Validation</fullName>
    <active>true</active>
    <label>QB Validation</label>
</RecordType>