force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Receiving_Process.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Receiving_Process</fullName>
    <active>true</active>
    <description>Receiving Process (APL)</description>
    <label>Receiving Process</label>
</RecordType>