force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Schedule_Header.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Schedule_Header</fullName>
    <active>true</active>
    <description>Schedule Header</description>
    <label>Schedule Header</label>
</RecordType>