force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Settings.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Settings</fullName>
    <active>true</active>
    <description>Organization-wide settings impacting the functionality of ServiceMax</description>
    <label>Settings</label>
</RecordType>