force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__SF_Action.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__SF_Action</fullName>
    <active>true</active>
    <description>Service Flow Action</description>
    <label>SF Action</label>
</RecordType>