force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Shipping_Process.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Shipping_Process</fullName>
    <active>true</active>
    <description>Shipping Process (APL)</description>
    <label>Shipping Process</label>
</RecordType>