force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__SM_Application_Profile.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__SM_Application_Profile</fullName>
    <active>true</active>
    <description>Device specific exclusions for wizards, steps and custom actions will be stored for each Delivery platform.</description>
    <label>Application Profile</label>
</RecordType>