force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__SPM_Rule.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__SPM_Rule</fullName>
    <active>true</active>
    <label>SPM Rule</label>
</RecordType>