force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__SPM_Scheduling_Optimization_Rule.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__SPM_Scheduling_Optimization_Rule</fullName>
    <active>true</active>
    <description>Hold the configurations for scheduled optimization</description>
    <label>SPM Scheduling Optimization Rule</label>
</RecordType>