force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Submodule.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Submodule</fullName>
    <active>true</active>
    <description>Submodule</description>
    <label>Submodule</label>
</RecordType>