force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__SVMX_Rule.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__SVMX_Rule</fullName>
    <active>true</active>
    <description>SVMX Rule</description>
    <label>SVMX Rule</label>
</RecordType>