force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Target_Manager.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Target_Manager</fullName>
    <active>true</active>
    <description>Target Manager</description>
    <label>Target Manager</label>
</RecordType>