force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Timesheet.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Timesheet</fullName>
    <active>true</active>
    <description>Timesheet Configuration</description>
    <label>Timesheet</label>
</RecordType>