force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__View_Definition.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__View_Definition</fullName>
    <active>true</active>
    <label>View Definition</label>
</RecordType>