force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Wizard.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Wizard</fullName>
    <active>true</active>
    <description>Wizard</description>
    <label>Wizard</label>
</RecordType>