force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Wizard_Step.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Wizard_Step</fullName>
    <active>true</active>
    <description>Wizard Step</description>
    <label>Wizard Step</label>
</RecordType>