force-app/main/default/objects/SVMXC__ServiceMax_Processes__c/recordTypes/SVMXC__Work_Order_Billing_Process.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Work_Order_Billing_Process</fullName>
    <active>true</active>
    <label>Work Order Billing Process</label>
</RecordType>